src/test/run-pass/attr.rs
// pretty-expanded FIXME #23616

#![feature(main)]

#[main]
fn foo() {
}
