src/test/compile-fail/bad-value-ident-false.rs
fn false() { } //! ERROR found `false` in expression position
fn main() { }